<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lk.edu.nchs.traincollisionavoidancesystem.AboutFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="127dp"
        android:layout_toStartOf="@+id/textView4"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:src="@drawable/about_wallpaper" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="268dp"
        android:layout_y="42dp"
        android:text="Beta Version 3.0"
        android:textColor="#5D5F5F"
        android:textSize="10sp"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="110dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_alignEnd="@+id/textView8"
        android:layout_marginBottom="13dp"
        android:layout_x="79dp"
        android:layout_y="376dp"
        android:src="@drawable/iit_logo" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="128dp"
        android:layout_height="122dp"
        android:layout_above="@+id/textView11"
        android:layout_alignEnd="@+id/textView8"
        android:layout_marginBottom="13dp"
        android:layout_x="158dp"
        android:layout_y="351dp"
        android:src="@drawable/logo_dedsec_white" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:layout_x="57dp"
        android:layout_y="279dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignEnd="@+id/textView12"
        android:layout_x="49dp"
        android:layout_y="109dp"
        android:text="@string/this_application_is_developed_by"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:layout_x="112dp"
        android:layout_y="137dp"
        android:fontFamily="serif"
        android:text="@string/team_dethsec"
        android:textAlignment="center"
        android:textColor="#3E3E3E"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView13"
        android:layout_alignStart="@+id/textView8"
        android:layout_x="56dp"
        android:layout_y="168dp"
        android:text="@string/informatics_institute_of_technology_iit"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_x="126dp"
        android:layout_y="189dp"
        android:text="@string/cutting_edge_2018"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_x="41dp"
        android:layout_y="260dp"
        android:text="@string/rate_our_application"
        android:textAlignment="center"
        android:textColor="#7F7F7F"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="69dp"
        android:layout_toEndOf="@+id/ratingBar"
        android:layout_x="305dp"
        android:layout_y="471dp"
        android:text="@string/_2018"
        android:textAlignment="center"
        android:textColor="#CCCCCC"
        android:textSize="12sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignEnd="@+id/textView11"
        android:layout_x="131dp"
        android:layout_y="17dp"
        android:text="@string/about"
        android:textColor="#134514"
        android:textSize="22sp"
        android:textStyle="bold" />

</AbsoluteLayout>
